Model/OCL/Compiler/oclParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.3.1.7705 OCL.g3 2011-08-25 12:24:40

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;

namespace Exolutio.Model.OCL.Compiler
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class OCLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BooleanLiteralExp", "Char", "EscapeSequence", "ExponentPart", "Hex", "IntegerLiteralExp", "InvalidLiteralExp", "LINE_COMMENT", "NESTED_ML_COMMENT", "NameChar", "NameStartChar", "NullLiteralExp", "Num", "RealLiteralExp", "SimpleName", "StringChar", "StringLiteralExp", "UnlimitedNaturalLiteralExp", "WS", "WhiteSpaceChar", "'('", "')'", "'+'", "','", "'-'", "'->'", "'.'", "'..'", "'/'", "':'", "'::'", "';'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'?'", "'@'", "'Bag'", "'Boolean'", "'Collection'", "'Integer'", "'OclAny'", "'OclInvalid'", "'OclMessage'", "'OclVoid'", "'OrderedSet'", "'Real'", "'Sequence'", "'Set'", "'String'", "'Tuple'", "'UnlimitedNatural'", "'['", "']'", "'^'", "'^^'", "'and'", "'else'", "'endif'", "'if'", "'implies'", "'in'", "'iterate'", "'let'", "'not'", "'or'", "'pre'", "'self'", "'then'", "'xor'", "'{'", "'|'", "'}'"
	};
	public const int EOF=-1;
	public const int BooleanLiteralExp=4;
	public const int Char=5;
	public const int EscapeSequence=6;
	public const int ExponentPart=7;
	public const int Hex=8;
	public const int IntegerLiteralExp=9;
	public const int InvalidLiteralExp=10;
	public const int LINE_COMMENT=11;
	public const int NESTED_ML_COMMENT=12;
	public const int NameChar=13;
	public const int NameStartChar=14;
	public const int NullLiteralExp=15;
	public const int Num=16;
	public const int RealLiteralExp=17;
	public const int SimpleName=18;
	public const int StringChar=19;
	public const int StringLiteralExp=20;
	public const int UnlimitedNaturalLiteralExp=21;
	public const int WS=22;
	public const int WhiteSpaceChar=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int T__75=75;
	public const int T__76=76;
	public const int T__77=77;
	public const int T__78=78;
	public const int T__79=79;

	// delegates
	// delegators

	public OCLParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public OCLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{

		OnCreated();
	}
		

	public override string[] TokenNames { get { return OCLParser.tokenNames; } }
	public override string GrammarFileName { get { return "OCL.g3"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules

	partial void EnterRule_oclExpression();
	partial void LeaveRule_oclExpression();

	// $ANTLR start "oclExpression"
	// OCL.g3:7:1: oclExpression : logicalImpliesExpression ;
	[GrammarRule("oclExpression")]
	private void oclExpression()
	{
		EnterRule_oclExpression();
		EnterRule("oclExpression", 1);
		TraceIn("oclExpression", 1);
		try { DebugEnterRule(GrammarFileName, "oclExpression");
		DebugLocation(7, 1);
		try
		{
			// OCL.g3:8:2: ( logicalImpliesExpression )
			DebugEnterAlt(1);
			// OCL.g3:8:3: logicalImpliesExpression
			{
			DebugLocation(8, 3);
			PushFollow(Follow._logicalImpliesExpression_in_oclExpression26);
			logicalImpliesExpression();
			PopFollow();


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("oclExpression", 1);
			LeaveRule("oclExpression", 1);
			LeaveRule_oclExpression();
		}
		DebugLocation(10, 1);
		} finally { DebugExitRule(GrammarFileName, "oclExpression"); }
		return;

	}
	// $ANTLR end "oclExpression"


	partial void EnterRule_logicalImpliesExpression();
	partial void LeaveRule_logicalImpliesExpression();

	// $ANTLR start "logicalImpliesExpression"
	// OCL.g3:12:1: logicalImpliesExpression : logicalXorExpression ( 'implies' logicalXorExpression )* ;
	[GrammarRule("logicalImpliesExpression")]
	private void logicalImpliesExpression()
	{
		EnterRule_logicalImpliesExpression();
		EnterRule("logicalImpliesExpression", 2);
		TraceIn("logicalImpliesExpression", 2);
		try { DebugEnterRule(GrammarFileName, "logicalImpliesExpression");
		DebugLocation(12, 1);
		try
		{
			// OCL.g3:13:2: ( logicalXorExpression ( 'implies' logicalXorExpression )* )
			DebugEnterAlt(1);
			// OCL.g3:13:4: logicalXorExpression ( 'implies' logicalXorExpression )*
			{
			DebugLocation(13, 4);
			PushFollow(Follow._logicalXorExpression_in_logicalImpliesExpression40);
			logicalXorExpression();
			PopFollow();

			DebugLocation(13, 25);
			// OCL.g3:13:25: ( 'implies' logicalXorExpression )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==67))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:13:26: 'implies' logicalXorExpression
					{
					DebugLocation(13, 26);
					Match(input,67,Follow._67_in_logicalImpliesExpression43); 
					DebugLocation(13, 36);
					PushFollow(Follow._logicalXorExpression_in_logicalImpliesExpression45);
					logicalXorExpression();
					PopFollow();


					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("logicalImpliesExpression", 2);
			LeaveRule("logicalImpliesExpression", 2);
			LeaveRule_logicalImpliesExpression();
		}
		DebugLocation(14, 1);
		} finally { DebugExitRule(GrammarFileName, "logicalImpliesExpression"); }
		return;

	}
	// $ANTLR end "logicalImpliesExpression"


	partial void EnterRule_logicalXorExpression();
	partial void LeaveRule_logicalXorExpression();

	// $ANTLR start "logicalXorExpression"
	// OCL.g3:15:1: logicalXorExpression : logicalOrExpression ( 'xor' logicalOrExpression )* ;
	[GrammarRule("logicalXorExpression")]
	private void logicalXorExpression()
	{
		EnterRule_logicalXorExpression();
		EnterRule("logicalXorExpression", 3);
		TraceIn("logicalXorExpression", 3);
		try { DebugEnterRule(GrammarFileName, "logicalXorExpression");
		DebugLocation(15, 1);
		try
		{
			// OCL.g3:16:2: ( logicalOrExpression ( 'xor' logicalOrExpression )* )
			DebugEnterAlt(1);
			// OCL.g3:16:4: logicalOrExpression ( 'xor' logicalOrExpression )*
			{
			DebugLocation(16, 4);
			PushFollow(Follow._logicalOrExpression_in_logicalXorExpression57);
			logicalOrExpression();
			PopFollow();

			DebugLocation(16, 24);
			// OCL.g3:16:24: ( 'xor' logicalOrExpression )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==76))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:16:25: 'xor' logicalOrExpression
					{
					DebugLocation(16, 25);
					Match(input,76,Follow._76_in_logicalXorExpression60); 
					DebugLocation(16, 31);
					PushFollow(Follow._logicalOrExpression_in_logicalXorExpression62);
					logicalOrExpression();
					PopFollow();


					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("logicalXorExpression", 3);
			LeaveRule("logicalXorExpression", 3);
			LeaveRule_logicalXorExpression();
		}
		DebugLocation(17, 1);
		} finally { DebugExitRule(GrammarFileName, "logicalXorExpression"); }
		return;

	}
	// $ANTLR end "logicalXorExpression"


	partial void EnterRule_logicalOrExpression();
	partial void LeaveRule_logicalOrExpression();

	// $ANTLR start "logicalOrExpression"
	// OCL.g3:18:1: logicalOrExpression : logicalAndExpression ( 'or' logicalAndExpression )* ;
	[GrammarRule("logicalOrExpression")]
	private void logicalOrExpression()
	{
		EnterRule_logicalOrExpression();
		EnterRule("logicalOrExpression", 4);
		TraceIn("logicalOrExpression", 4);
		try { DebugEnterRule(GrammarFileName, "logicalOrExpression");
		DebugLocation(18, 1);
		try
		{
			// OCL.g3:19:2: ( logicalAndExpression ( 'or' logicalAndExpression )* )
			DebugEnterAlt(1);
			// OCL.g3:19:4: logicalAndExpression ( 'or' logicalAndExpression )*
			{
			DebugLocation(19, 4);
			PushFollow(Follow._logicalAndExpression_in_logicalOrExpression74);
			logicalAndExpression();
			PopFollow();

			DebugLocation(19, 25);
			// OCL.g3:19:25: ( 'or' logicalAndExpression )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==72))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:19:26: 'or' logicalAndExpression
					{
					DebugLocation(19, 26);
					Match(input,72,Follow._72_in_logicalOrExpression77); 
					DebugLocation(19, 31);
					PushFollow(Follow._logicalAndExpression_in_logicalOrExpression79);
					logicalAndExpression();
					PopFollow();


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("logicalOrExpression", 4);
			LeaveRule("logicalOrExpression", 4);
			LeaveRule_logicalOrExpression();
		}
		DebugLocation(20, 1);
		} finally { DebugExitRule(GrammarFileName, "logicalOrExpression"); }
		return;

	}
	// $ANTLR end "logicalOrExpression"


	partial void EnterRule_logicalAndExpression();
	partial void LeaveRule_logicalAndExpression();

	// $ANTLR start "logicalAndExpression"
	// OCL.g3:21:1: logicalAndExpression : relationalEqExpression ( 'and' relationalEqExpression )* ;
	[GrammarRule("logicalAndExpression")]
	private void logicalAndExpression()
	{
		EnterRule_logicalAndExpression();
		EnterRule("logicalAndExpression", 5);
		TraceIn("logicalAndExpression", 5);
		try { DebugEnterRule(GrammarFileName, "logicalAndExpression");
		DebugLocation(21, 1);
		try
		{
			// OCL.g3:22:2: ( relationalEqExpression ( 'and' relationalEqExpression )* )
			DebugEnterAlt(1);
			// OCL.g3:22:4: relationalEqExpression ( 'and' relationalEqExpression )*
			{
			DebugLocation(22, 4);
			PushFollow(Follow._relationalEqExpression_in_logicalAndExpression91);
			relationalEqExpression();
			PopFollow();

			DebugLocation(22, 27);
			// OCL.g3:22:27: ( 'and' relationalEqExpression )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==63))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:22:28: 'and' relationalEqExpression
					{
					DebugLocation(22, 28);
					Match(input,63,Follow._63_in_logicalAndExpression94); 
					DebugLocation(22, 34);
					PushFollow(Follow._relationalEqExpression_in_logicalAndExpression96);
					relationalEqExpression();
					PopFollow();


					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("logicalAndExpression", 5);
			LeaveRule("logicalAndExpression", 5);
			LeaveRule_logicalAndExpression();
		}
		DebugLocation(23, 1);
		} finally { DebugExitRule(GrammarFileName, "logicalAndExpression"); }
		return;

	}
	// $ANTLR end "logicalAndExpression"


	partial void EnterRule_relationalEqExpression();
	partial void LeaveRule_relationalEqExpression();

	// $ANTLR start "relationalEqExpression"
	// OCL.g3:25:1: relationalEqExpression : relationalNotEqExprassion ( ( '=' | '<>' ) relationalNotEqExprassion )* ;
	[GrammarRule("relationalEqExpression")]
	private void relationalEqExpression()
	{
		EnterRule_relationalEqExpression();
		EnterRule("relationalEqExpression", 6);
		TraceIn("relationalEqExpression", 6);
		try { DebugEnterRule(GrammarFileName, "relationalEqExpression");
		DebugLocation(25, 1);
		try
		{
			// OCL.g3:26:2: ( relationalNotEqExprassion ( ( '=' | '<>' ) relationalNotEqExprassion )* )
			DebugEnterAlt(1);
			// OCL.g3:26:5: relationalNotEqExprassion ( ( '=' | '<>' ) relationalNotEqExprassion )*
			{
			DebugLocation(26, 5);
			PushFollow(Follow._relationalNotEqExprassion_in_relationalEqExpression110);
			relationalNotEqExprassion();
			PopFollow();

			DebugLocation(26, 31);
			// OCL.g3:26:31: ( ( '=' | '<>' ) relationalNotEqExprassion )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_0 = input.LA(1);

				if (((LA5_0>=38 && LA5_0<=39)))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:26:32: ( '=' | '<>' ) relationalNotEqExprassion
					{
					DebugLocation(26, 32);
					if ((input.LA(1)>=38 && input.LA(1)<=39))
					{
						input.Consume();
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(26, 43);
					PushFollow(Follow._relationalNotEqExprassion_in_relationalEqExpression119);
					relationalNotEqExprassion();
					PopFollow();


					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("relationalEqExpression", 6);
			LeaveRule("relationalEqExpression", 6);
			LeaveRule_relationalEqExpression();
		}
		DebugLocation(27, 1);
		} finally { DebugExitRule(GrammarFileName, "relationalEqExpression"); }
		return;

	}
	// $ANTLR end "relationalEqExpression"


	partial void EnterRule_relationalNotEqExprassion();
	partial void LeaveRule_relationalNotEqExprassion();

	// $ANTLR start "relationalNotEqExprassion"
	// OCL.g3:28:1: relationalNotEqExprassion : additiveExpression ( ( '<' | '>' | '<=' | '>=' ) additiveExpression )* ;
	[GrammarRule("relationalNotEqExprassion")]
	private void relationalNotEqExprassion()
	{
		EnterRule_relationalNotEqExprassion();
		EnterRule("relationalNotEqExprassion", 7);
		TraceIn("relationalNotEqExprassion", 7);
		try { DebugEnterRule(GrammarFileName, "relationalNotEqExprassion");
		DebugLocation(28, 1);
		try
		{
			// OCL.g3:29:2: ( additiveExpression ( ( '<' | '>' | '<=' | '>=' ) additiveExpression )* )
			DebugEnterAlt(1);
			// OCL.g3:29:3: additiveExpression ( ( '<' | '>' | '<=' | '>=' ) additiveExpression )*
			{
			DebugLocation(29, 3);
			PushFollow(Follow._additiveExpression_in_relationalNotEqExprassion133);
			additiveExpression();
			PopFollow();

			DebugLocation(29, 22);
			// OCL.g3:29:22: ( ( '<' | '>' | '<=' | '>=' ) additiveExpression )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_0 = input.LA(1);

				if (((LA6_0>=36 && LA6_0<=37)||(LA6_0>=40 && LA6_0<=41)))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:29:23: ( '<' | '>' | '<=' | '>=' ) additiveExpression
					{
					DebugLocation(29, 23);
					if ((input.LA(1)>=36 && input.LA(1)<=37)||(input.LA(1)>=40 && input.LA(1)<=41))
					{
						input.Consume();
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(29, 46);
					PushFollow(Follow._additiveExpression_in_relationalNotEqExprassion149);
					additiveExpression();
					PopFollow();


					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("relationalNotEqExprassion", 7);
			LeaveRule("relationalNotEqExprassion", 7);
			LeaveRule_relationalNotEqExprassion();
		}
		DebugLocation(31, 1);
		} finally { DebugExitRule(GrammarFileName, "relationalNotEqExprassion"); }
		return;

	}
	// $ANTLR end "relationalNotEqExprassion"


	partial void EnterRule_additiveExpression();
	partial void LeaveRule_additiveExpression();

	// $ANTLR start "additiveExpression"
	// OCL.g3:34:1: additiveExpression : multiplicativeExpression ( ( '+' | '-' ) multiplicativeExpression )* ;
	[GrammarRule("additiveExpression")]
	private void additiveExpression()
	{
		EnterRule_additiveExpression();
		EnterRule("additiveExpression", 8);
		TraceIn("additiveExpression", 8);
		try { DebugEnterRule(GrammarFileName, "additiveExpression");
		DebugLocation(34, 1);
		try
		{
			// OCL.g3:35:2: ( multiplicativeExpression ( ( '+' | '-' ) multiplicativeExpression )* )
			DebugEnterAlt(1);
			// OCL.g3:35:4: multiplicativeExpression ( ( '+' | '-' ) multiplicativeExpression )*
			{
			DebugLocation(35, 4);
			PushFollow(Follow._multiplicativeExpression_in_additiveExpression166);
			multiplicativeExpression();
			PopFollow();

			DebugLocation(35, 29);
			// OCL.g3:35:29: ( ( '+' | '-' ) multiplicativeExpression )*
			try { DebugEnterSubRule(7);
			while (true)
			{
				int alt7=2;
				try { DebugEnterDecision(7, false);
				int LA7_0 = input.LA(1);

				if ((LA7_0==26||LA7_0==28))
				{
					alt7 = 1;
				}


				} finally { DebugExitDecision(7); }
				switch ( alt7 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:35:30: ( '+' | '-' ) multiplicativeExpression
					{
					DebugLocation(35, 30);
					if (input.LA(1)==26||input.LA(1)==28)
					{
						input.Consume();
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(35, 41);
					PushFollow(Follow._multiplicativeExpression_in_additiveExpression176);
					multiplicativeExpression();
					PopFollow();


					}
					break;

				default:
					goto loop7;
				}
			}

			loop7:
				;

			} finally { DebugExitSubRule(7); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("additiveExpression", 8);
			LeaveRule("additiveExpression", 8);
			LeaveRule_additiveExpression();
		}
		DebugLocation(36, 1);
		} finally { DebugExitRule(GrammarFileName, "additiveExpression"); }
		return;

	}
	// $ANTLR end "additiveExpression"


	partial void EnterRule_multiplicativeExpression();
	partial void LeaveRule_multiplicativeExpression();

	// $ANTLR start "multiplicativeExpression"
	// OCL.g3:38:1: multiplicativeExpression : unaryExpression ( ( '*' | '/' ) unaryExpression )* ;
	[GrammarRule("multiplicativeExpression")]
	private void multiplicativeExpression()
	{
		EnterRule_multiplicativeExpression();
		EnterRule("multiplicativeExpression", 9);
		TraceIn("multiplicativeExpression", 9);
		try { DebugEnterRule(GrammarFileName, "multiplicativeExpression");
		DebugLocation(38, 1);
		try
		{
			// OCL.g3:39:2: ( unaryExpression ( ( '*' | '/' ) unaryExpression )* )
			DebugEnterAlt(1);
			// OCL.g3:39:5: unaryExpression ( ( '*' | '/' ) unaryExpression )*
			{
			DebugLocation(39, 5);
			PushFollow(Follow._unaryExpression_in_multiplicativeExpression192);
			unaryExpression();
			PopFollow();

			DebugLocation(39, 21);
			// OCL.g3:39:21: ( ( '*' | '/' ) unaryExpression )*
			try { DebugEnterSubRule(8);
			while (true)
			{
				int alt8=2;
				try { DebugEnterDecision(8, false);
				int LA8_0 = input.LA(1);

				if ((LA8_0==UnlimitedNaturalLiteralExp||LA8_0==32))
				{
					alt8 = 1;
				}


				} finally { DebugExitDecision(8); }
				switch ( alt8 )
				{
				case 1:
					DebugEnterAlt(1);
					// OCL.g3:39:22: ( '*' | '/' ) unaryExpression
					{
					DebugLocation(39, 22);
					if (input.LA(1)==UnlimitedNaturalLiteralExp||input.LA(1)==32)
					{
						input.Consume();
						state.errorRecovery=false;
					}
					else
					{
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(39, 32);
					PushFollow(Follow._unaryExpression_in_multiplicativeExpression201);
					unaryExpression();
					PopFollow();


					}
					break;

				default:
